make login page dive and home  page perfectly

--- a/login page.html
+++ b/login page.html
@@ -8,7 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-
-    <img src="assests/media/login images/login image.jpg" alt="" class="login_image">
+   <div class="main"></div>
 </body>
 </html>
