complite login page

--- a/login page.html
+++ b/login page.html
@@ -8,6 +8,32 @@
     <title>Document</title>
 </head>
 <body>
-   <div class="main"></div>
+   <div class="main">
+
+    <div class="sigin"><h1>Sigin in</h1></div>
+
+    <div class="login-details"><input type="text" placeholder="Username" class="username">
+
+        <input type="password" class="password" placeholder="password">
+    </div>
+
+    <div class="remember-and-froget-password">
+        <div class="remember-me">
+            <input type="checkbox" name="remember" class="remember-checkbox">  <label for="remember"> Remember me</label>
+        </div>
+
+        <div class="froget-password"><a href=""><h1>froget-password</h1></a></div>
+    </div>
+    <div class="login-button">
+
+        <input type="button" name="button" class="login-button"  value="LOGIN">
+
+    </div>
+
+    <div class="no-acc"><a href=""> <p>dont have account? Create new</p></a></div>
+
+
+    
+   </div>
 </body>
 </html>
